package ar.edu.utn.frba.dds;

public enum EstadoDonacion {
  EN_DEPOSITO,
  ASIGNACION_REALIZADA,
  LISTA_PARA_ENTREGAR,
  EN_TRASLADO,
  ENTREGADA,
  ENTREGA_FALLIDA,
  VENCIDA
}
