package ar.edu.utn.frba.dds.bienes;

public class BienSimple extends Bien {

  public BienSimple(String descripcion, String foto, Subcategoria subcategoria, Integer cantidad, String unidadDeMedida) {
    super(descripcion, foto, subcategoria, cantidad, unidadDeMedida);
  }
}
