package ar.edu.utn.frba.dds.donantes;

public class Representante {
  private String nombre;
  private String apellido;
  private Integer dni;
  private String email;
}
