package ar.edu.utn.frba.dds.donantes;

public enum TipoJuridico {
  GUBERNAMENTAL,
  ONG,
  EMPRESA,
  INSTITUCION
}
